--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "laravel/framework": "5.8.*"
+        "php": ">=7.1.3",
+        "laravel/framework": "~5.7"
     },
     "autoload": {
         "psr-4": {
