--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3",
-        "laravel/framework": "~5.8"
+        "laravel/framework": "5.3.*"
     },
     "autoload": {
         "psr-4": {
