--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "unscode/galleries",
+    "name": "aleacastro/galleries",
     "description": "A simple gallery package",
     "keywords": ["laravel", "gallery", "images"],
     "license": "MIT",
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "5.1.*"    
+        "laravel/framework": "6.*"    
     },
     "autoload": {
         "psr-4": {
